fix bottom list screen spacing, add ended list

--- a/src/plugins/Stake/components/StakingItem/StakingItem.pcss
+++ b/src/plugins/Stake/components/StakingItem/StakingItem.pcss
@@ -144,18 +144,16 @@
 	}
 
 	&__label {
-		align-items: center;
-		border-radius: 0 0 0 5px;
-		color: #fff;
-		display: flex;
-		font-weight: 700;
-		height: 2rem;
-		justify-content: center;
+		border-radius: 0 0 0 3px;
+		color: #ffff;
+		font-size: 14px;
+		line-height: 16px;
+		margin: 0;
+		padding: 7px 17px 7px 17px;
 		position: absolute;
 		right: 0;
 		text-align: center;
-		top: 0;
-		width: 7rem;
+		text-transform: uppercase;
 
 		&-upcoming {
 			background-color: #e06211;
