--- a/src/plugins/Stake/screens/StakingListScreen/StakingListScreen.pcss
+++ b/src/plugins/Stake/screens/StakingListScreen/StakingListScreen.pcss
@@ -1,5 +1,6 @@
 .desktop-staking-list-screen {
 	margin-top: 1rem;
+	padding-bottom: 42px;
 
 	&__header {
 		background-color: #313445;
@@ -62,7 +63,7 @@
 			box-sizing: border-box;
 			display: flex;
 			flex-direction: row;
-			width: 50%;
+			width: 60%;
 
 			&-btn {
 				align-items: center;
@@ -81,7 +82,7 @@
 				padding: 3px 7px;
 				text-align: center;
 				transition: ease-in-out 0.1s;
-				width: 33.33%;
+				width: 25%;
 				z-index: 100;
 			}
 
